# swagger/swagger-output.json
@@ -305,7 +305,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "content": {
+                "name": {
                   "type": "string",
                   "example": "食品名稱"
                 },
@@ -343,7 +343,7 @@
                 }
               },
               "required": [
-                "content",
+                "name",
                 "perUnitWeight",
                 "nutrition"
               ]
@@ -437,7 +437,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "content": {
+                "name": {
                   "type": "string",
                   "example": "食品名稱"
                 },
@@ -475,7 +475,7 @@
                 }
               },
               "required": [
-                "content",
+                "name",
                 "perUnitWeight",
                 "nutrition"
               ]
@@ -611,33 +611,246 @@
     },
     "/api/customFoods": {
       "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
+        "tags": [
+          "customFood - 自訂食品"
+        ],
+        "description": "取得自訂食品列表 API",
+        "parameters": [
+          {
+            "name": "search",
+            "in": "query",
+            "type": "String",
+            "description": "關鍵字搜尋(中、英文名稱搜尋)"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "type": "Number",
+            "description": "頁數搜尋"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "Number",
+            "description": "撈取資料筆數"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "自訂食品資訊",
+            "schema": {
+              "$ref": "#/definitions/getAllCustomFood"
+            }
+          }
+        },
+        "security": [
+          {
+            "api_key": [
+              "apiKeyAuth"
+            ]
+          }
+        ]
       }
     },
     "/api/customFood": {
       "post": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
+        "tags": [
+          "customFood - 自訂食品"
+        ],
+        "description": "新增一筆自訂食品 API",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "description": "資料格式",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "食品名稱"
+                },
+                "subName": {
+                  "type": "string",
+                  "example": "食品英文名稱"
+                },
+                "brand": {
+                  "type": "string",
+                  "example": "食品品牌"
+                },
+                "perUnitWeight": {
+                  "type": "string",
+                  "example": "食品重含量"
+                },
+                "nutrition": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "ingredient": {
+                        "type": "string",
+                        "example": "食品營養成分"
+                      },
+                      "unit": {
+                        "type": "string",
+                        "example": "食品營養成分單位"
+                      },
+                      "perUnitContent": {
+                        "type": "string",
+                        "example": "每單位重含量"
+                      }
+                    }
+                  }
+                }
+              },
+              "required": [
+                "name",
+                "perUnitWeight",
+                "nutrition"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "自訂食品資訊",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "message": {
+                  "type": "string",
+                  "example": "新增一筆自訂食品成功"
+                },
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "newCustomFoodId": {
+                      "type": "string",
+                      "example": "自訂食品Id"
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "api_key": [
+              "apiKeyAuth"
+            ]
+          }
+        ]
       }
     },
     "/api/customFood/{customFoodId}": {
       "patch": {
-        "description": "",
+        "tags": [
+          "customFood - 自訂食品"
+        ],
+        "description": "編輯一筆自訂食品 API",
         "parameters": [
           {
             "name": "customFoodId",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "description": "資料格式",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "食品名稱"
+                },
+                "subName": {
+                  "type": "string",
+                  "example": "食品英文名稱"
+                },
+                "brand": {
+                  "type": "string",
+                  "example": "食品品牌"
+                },
+                "perUnitWeight": {
+                  "type": "string",
+                  "example": "食品重含量"
+                },
+                "nutrition": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "ingredient": {
+                        "type": "string",
+                        "example": "食品營養成分"
+                      },
+                      "unit": {
+                        "type": "string",
+                        "example": "食品營養成分單位"
+                      },
+                      "perUnitContent": {
+                        "type": "string",
+                        "example": "每單位重含量"
+                      }
+                    }
+                  }
+                }
+              },
+              "required": [
+                "name",
+                "perUnitWeight",
+                "nutrition"
+              ]
+            }
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "自訂食品資訊",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "message": {
+                  "type": "string",
+                  "example": "編輯一筆自訂食品成功"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "api_key": [
+              "apiKeyAuth"
+            ]
+          }
+        ]
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "customFood - 自訂食品"
+        ],
+        "description": "刪除自訂食品 API",
         "parameters": [
           {
             "name": "customFoodId",
@@ -646,7 +859,166 @@
             "type": "string"
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "自訂食品資訊",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "message": {
+                  "type": "string",
+                  "example": "刪除一筆自訂食品成功"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "api_key": [
+              "apiKeyAuth"
+            ]
+          }
+        ]
+      }
+    },
+    "/api/diarys": {
+      "get": {
+        "tags": [
+          "Diary - 營養日記"
+        ],
+        "description": "取得今月營養日記 API",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "營養資訊",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "message": {
+                  "type": "string",
+                  "example": "取得今月營養日記成功"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/diary": {
+      "post": {
+        "tags": [
+          "Diary - 營養日記"
+        ],
+        "description": "新增一筆營養日記 API",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "營養資訊",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "message": {
+                  "type": "string",
+                  "example": "新增一筆營養日記成功"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/diary/{diaryId}": {
+      "patch": {
+        "tags": [
+          "Diary - 營養日記"
+        ],
+        "description": "編輯一筆營養日記 API",
+        "parameters": [
+          {
+            "name": "diaryId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "營養資訊",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "message": {
+                  "type": "string",
+                  "example": "編輯一筆營養日記成功"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Diary - 營養日記"
+        ],
+        "description": "刪除一筆營養日記 API",
+        "parameters": [
+          {
+            "name": "diaryId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "營養資訊",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "message": {
+                  "type": "string",
+                  "example": "刪除一筆營養日記成功"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
       }
     }
   },
@@ -846,6 +1218,67 @@
               "_id": {
                 "type": "string",
                 "example": "食品Id"
+              },
+              "name": {
+                "type": "string",
+                "example": "食品名稱"
+              },
+              "subName": {
+                "type": "string",
+                "example": "食品英文名稱"
+              },
+              "brand": {
+                "type": "string",
+                "example": "食品品牌"
+              },
+              "perUnitWeight": {
+                "type": "string",
+                "example": "食品重含量"
+              },
+              "nutrition": {
+                "type": "array",
+                "items": {
+                  "type": "object",
+                  "properties": {
+                    "ingredient": {
+                      "type": "string",
+                      "example": "食品營養成分"
+                    },
+                    "unit": {
+                      "type": "string",
+                      "example": "食品營養成分單位"
+                    },
+                    "perUnitContent": {
+                      "type": "string",
+                      "example": " 每單位重含量"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "getAllCustomFood": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "type": "boolean",
+          "example": true
+        },
+        "message": {
+          "type": "string",
+          "example": "取得自訂食品列表成功"
+        },
+        "data": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "_id": {
+                "type": "string",
+                "example": "自訂食品Id"
               },
               "name": {
                 "type": "string",
